test/tests/operators/load_balance/error_expected_variable.txt
error: expected argument of type `list`, but got `string`
 --> tests/operators/load_balance/error_expected_variable.tql:7:14
  |
7 | load_balance "alpha" {
  |              ^^^^^^^ 
  |
